src/objects/ServiceNow_Incident_Type__mdt.object
<CustomObject>
    <description>Incident types for user requests that are sent to ServiceNow</description>
    <fields>
        <fullName>Email_Recipient__c</fullName>
        <description>Email recipient for service now request</description>
        <label>Email Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if incident type is active for users</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Name of incident type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ServiceNow Incident Type</label>
    <listViews>
        <fullName>Detail</fullName>
        <columns>MasterLabel</columns>
        <columns>Is_Active__c</columns>
        <columns>Email_Recipient__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detail</label>
    </listViews>
    <pluralLabel>ServiceNow Incident Types</pluralLabel>
</CustomObject>